# cloud_edge_push

./: .gitignore  LICENSE  readme.md
edge_client/: CMakeLists.txt  compile.sh
edge_client/client_app/: CMakeLists.txt
edge_client/client_app/edge_app/: CMakeLists.txt
edge_client/client_app/edge_app/include/: appconfig_reader.h  fileinfos_rw.h  json_message_processor.h  messagehandler.h  sys_update_handler.h
edge_client/client_app/edge_app/src/: appconfig_reader.cpp  fileinfos_rw.cpp  json_message_processor.cpp  main.cpp  messagehandler.cpp  sys_update_handler.cpp
edge_client/client_app/recv_sys_info/: CMakeLists.txt  recv_sys_info.cpp  recv_sys_info.h  shm_buf.cpp  shm_buf.h  shm_bytes_buffer.hpp
edge_client/client_app/tcpclient/: CMakeLists.txt  messagebus.cpp  tcpclient.cpp  tcpclient.h  tcpclient_impl.cpp  tcpclient_impl.h
edge_client/conf/: client_app.cfg  daemonapp.cfg  logger.cfg
edge_client/daemon/: CMakeLists.txt
edge_client/daemon/src/: appconfig_reader.cpp  appconfig_reader.h  main.cpp  processmanager.cpp  processmanager.h  shared_memory_checker.hpp
edge_client/include/: app_common.h  bytes_buffer.hpp  call_async.hpp  message_def.h  messagebus.h  messagebus.hpp  processhelper.hpp  syncwaitmsg.hpp  tcp_message.h  thread_pool.hpp  utility.hpp
edge_client/py_sysinfo/: bytes_buffer.py  py_sysinfo.py  shm_buf.py
update_server/: killnginx.sh  readme.md
update_server/app/: readme.md
update_server/app/http/: com_def.lua  http_dispatch.lua  load_upload_db.lua  service_api.lua  service_pushfile.lua  service_query.lua  service_upload.lua
update_server/app/stream/: main_proc.lua  message_def.lua  message_packet.lua  message_proc.lua
update_server/app/utils/: http_pool.lua  utility.lua
update_server/conf/: nginx.conf  nginx_http.conf  nginx_stream.conf
update_server/lib/: readme.md  unqlite.lua
update_server/lib/resty/: httpclient.lua
update_server/lib/zzlib/: test.lua  zzlib-bit32.lua  zzlib.lua
update_server/test/: test_client.lua  uploadfiles.py
